[package]
name = "korvin-core"
caregories.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
description = "The core for korvin frontend framework"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2.2.0"
derive_more = "0.99.17"
enum_dispatch = "0.3.12"
eyre = "0.6.8"
futures = "0.3.28"
js-sys = "0.3.64"
lazy_static = "1.4.0"
nonempty = { git = "https://github.com/cloudhead/nonempty", version = "0.8.1", features = [
  "serialize",
] }
once_cell = "1.18.0"
sorts = "0.6.1"
tabled = "0.14.0"
thiserror = "1.0.48"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-web = "0.1.2"
futures-util = "0.3.28"
valuable = { version = "0.1.0", features = ["derive"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys.workspace = true
itertools = "0.11.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.37"
eyre = "0.6.8"
test-log = { version = "0.2.12", default-features = false, features = [
  "trace",
] }
