[package]
name = "korvin"
version.workspace = true
categories.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
korvin-core = { workspace = true, version = "0.2.1" }
