[package]
name = "test-app"
version.workspace = true
categories.workspace = true
readme.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
korvin-core.workspace = true
chrono = { version = "0.4.31", features = ["serde"] }
console_error_panic_hook = "0.1.7"
derive_more = "0.99.17"
eyre = "0.6.8"
futures = "0.3.28"
futures-util = "0.3.28"
strum = { version = "0.25.0", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "time"] }
tracing-web = "0.1.2"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']
